Merged stdout, stderr